tests/snapshots/e2e_test__case_08_diff.snap
---
source: tests/e2e_test.rs
expression: "fixture.stager.diff(&[\"flake.nix\".to_string()]).unwrap()"
---
flake.nix:
  +7:	    determinate.url = "github:DeterminateSystems/determinate";

  +138:	      debug = true;

  +143:	        ./flake-modules/home-manager.nix
