tests/snapshots/e2e_test__case_08_initial_diff.snap
---
source: tests/e2e_test.rs
expression: diff
---
diff --git a/flake.nix b/flake.nix
index 770badb..1a948fd 100644
--- a/flake.nix
+++ b/flake.nix
@@ -6,0 +7 @@ line 6
+    determinate.url = "github:DeterminateSystems/determinate";
@@ -136,0 +138 @@ line 136
+      debug = true;
@@ -140,0 +143 @@ line 140
+        ./flake-modules/home-manager.nix
