tests/snapshots/e2e_test__case_08_remaining.snap
---
source: tests/e2e_test.rs
expression: remaining
---
diff --git a/flake.nix b/flake.nix
index eee5d97..1a948fd 100644
--- a/flake.nix
+++ b/flake.nix
@@ -137,0 +138 @@ line 136
+      debug = true;
@@ -142 +142,0 @@ line 140
-line 141
@@ -143,0 +144 @@ line 141
+line 141
