tests/snapshots/e2e_test__case_08_staged.snap
---
source: tests/e2e_test.rs
expression: fixture.git_diff_cached_all()
---
diff --git a/flake.nix b/flake.nix
index 770badb..723bd0a 100644
--- a/flake.nix
+++ b/flake.nix
@@ -6,0 +7 @@ line 6
+    determinate.url = "github:DeterminateSystems/determinate";
@@ -140,0 +142 @@ line 140
+        ./flake-modules/home-manager.nix
