tests/snapshots/e2e_test__case_09_remaining_final.snap
---
source: tests/e2e_test.rs
expression: remaining_final
---
diff --git a/config.nix b/config.nix
index 6a3a835..41114ff 100644
--- a/config.nix
+++ b/config.nix
@@ -10 +9,0 @@ line 8
-line 9
@@ -11,0 +11 @@ line 9
+line 9
