tests/snapshots/e2e_test__case_09_staged_after_first.snap
---
source: tests/e2e_test.rs
expression: staged_after_first
---
diff --git a/config.nix b/config.nix
index fa2da6e..7c88260 100644
--- a/config.nix
+++ b/config.nix
@@ -9,0 +10 @@ line 9
+# SECOND INSERTION
