tests/snapshots/e2e_test__case_09_staged_final.snap
---
source: tests/e2e_test.rs
expression: staged_final
---
diff --git a/config.nix b/config.nix
index fa2da6e..6a3a835 100644
--- a/config.nix
+++ b/config.nix
@@ -2,0 +3 @@ line 2
+# FIRST INSERTION
@@ -9,0 +11 @@ line 9
+# SECOND INSERTION
