tests/snapshots/e2e_test__case_10_initial_diff.snap
---
source: tests/e2e_test.rs
expression: diff
---
diff --git a/config.nix b/config.nix
index fa2da6e..41114ff 100644
--- a/config.nix
+++ b/config.nix
@@ -2,0 +3 @@ line 2
+# FIRST INSERTION
@@ -8,0 +10 @@ line 8
+# SECOND INSERTION
