tests/snapshots/e2e_test__case_10_staged.snap
---
source: tests/e2e_test.rs
expression: fixture.git_diff_cached_all()
---
diff --git a/config.nix b/config.nix
index fa2da6e..954e529 100644
--- a/config.nix
+++ b/config.nix
@@ -2,0 +3 @@ line 2
+# FIRST INSERTION
@@ -7,0 +9 @@ line 7
+# SECOND INSERTION
